--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -12,7 +12,7 @@ jobs:
     - name: Set up JDK 1.8
       uses: actions/setup-java@v3
       with:
-        java-version: '8'
+        java-version: 8
         distribution: 'temurin'
         java-package: jdk+fx 
     - name: Build with Maven
