--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -13,7 +13,7 @@ jobs:
       uses: actions/setup-java@v3
       with:
         java-version: 8
-        distribution: 'temurin'
+        distribution: 'zulu'
         java-package: jdk+fx 
     - name: Build with Maven
       run: mvn -B package --file pom.xml
