--- a/pom.xml
+++ b/pom.xml
@@ -16,9 +16,12 @@
 
 
 	<properties>
-
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
+
+	<properties>
+        	<maven.test.skip>true</maven.test.skip>
+    	</properties>
 
 	<repositories>
 		<repository>
@@ -134,6 +137,9 @@
 				<artifactId>maven-surefire-plugin</artifactId>
 				<!-- JUnit 5 requires Surefire version 2.22.0 or higher -->
 				<version>2.22.0</version>
+				 <configuration>
+        				<skipTests>true</skipTests>
+    				</configuration>
 			</plugin>
 
 			<plugin>
