--- a/pom.xml
+++ b/pom.xml
@@ -140,9 +140,9 @@
 				<artifactId>maven-surefire-plugin</artifactId>
 				<!-- JUnit 5 requires Surefire version 2.22.0 or higher -->
 				<version>2.22.0</version>
-				 <configuration>
+				<!-- <configuration>
         				<skipTests>true</skipTests>
-    				</configuration>
+    				</configuration> -->
 			</plugin>
 
 			<plugin>
